--- a/politics.html
+++ b/politics.html
@@ -33,10 +33,10 @@
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
   
-      <a href="index.html" class="logo d-flex align-items-center imagenlogo">
-        <img src="assets/img/favicon.png" class="imagenlogo-img" alt="">
+      <a href="index.html" class="logo d-flex align-items-center">
+        <img src="assets/img/favicon.png" alt="">
         <h1 class="sitename">Ultra Deep Tech</h1>
-    </a>
+      </a>
   
       <nav id="navmenu" class="navmenu">
         <ul>
@@ -51,19 +51,19 @@
           </li>
           <li class="dropdown"><a href="productsdetails.html"><span>Products & Solutions</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="productsdetails.html#product-1">Interpretability</a></li>
-              <li><a href="productsdetails.html#product-2">Anonymization</a></li>
-              <li><a href="productsdetails.html#product-3">Compression</a></li>
-              <li><a href="productsdetails.html#product-4">Benchmarking</a></li>
-              <li><a href="productsdetails.html#product-5">GenAI Safety</a></li>
-              <li><a href="productsdetails.html#product-6">Evolving Threat Management</a></li>
-              <li><a href="productsdetails.html#product-7">Algorithmic Protection</a></li>
+              <li><a href="productsdetails.html?product=product-1">Interpretability</a></li>
+              <li><a href="productsdetails.html?product=product-2">Anonymization</a></li>
+              <li><a href="productsdetails.html?product=product-3">Compression</a></li>
+              <li><a href="productsdetails.html?product=product-4">Benchmarking</a></li>
+              <li><a href="productsdetails.html?product=product-5">GenAI Safety</a></li>
+              <li><a href="productsdetails.html?product=product-6">Evolving Threat Management</a></li>
+              <li><a href="productsdetails.html?product=product-7">Algorithmic Protection</a></li>
             </ul>
           </li>
           <li class="dropdown"><a href="service-details.html"><span>Services</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="service-details.html#service-1">AI and Data Engineering Consulting</a></li>
-              <li><a href="service-details.html#service-2">Personalized Solutions for Medium, Big Companies, and Fortune 500</a></li>
+              <li><a href="service-details.html?product=product-1">AI and Data Engineering Consulting</a></li>
+              <li><a href="service-details.html?product=product-2">Personalized Solutions for Medium, Big Companies, and Fortune 500</a></li>
               <li><a href="service-details.html">Case Studies and Client Testimonials</a></li>
               <li><a href="service-details.html">Service Packages and Pricing</a></li>
             </ul>
@@ -113,7 +113,7 @@
         <div class="row gy-4" data-aos="fade-up" data-aos-delay="100">
         
           <div class="col-lg-12 text-center" data-aos="fade-up" data-aos-delay="200">
-            <div class="content">
+            <div class="content" id="terms">
               <h3>Terms of service</h3>
               <p>
 <b style="color: #2b5e96">1. Acceptance of Terms</b><bR><br>
@@ -169,7 +169,7 @@ If you have any questions about these Terms of Service, please contact us at <a 
         <div class="row gy-4" data-aos="fade-up" data-aos-delay="100">
 
           <div class="col-lg-12 text-center" data-aos="fade-up" data-aos-delay="200">
-            <div class="content">
+            <div class="content" id="Privacy">
               <h3>Privacy Policy</h3>
               <p>
         
@@ -256,7 +256,7 @@ For any questions or to exercise your rights of access, rectification, cancellat
         <div class="row gy-4" data-aos="fade-up" data-aos-delay="100">
 
           <div class="col-lg-12 text-center" data-aos="fade-up" data-aos-delay="200">
-            <div class="content">
+            <div class="content" id="cookie">
               <h3>Cookie Policy for Ultra Deep Tech</h3>
               <p>
                 <b style="color: #2b5e96">1. Introduction</b><br>
@@ -330,21 +330,21 @@ If you have any questions about our Cookie Policy, please contact us via contact
               <li><a href="about.html">About us</a></li>
               <li><a href="productsdetails.html">Products & Solutions</a></li>
               <li><a href="service-details.html">Services</a></li>
-              <li><a href="politics.html">Terms of service</a></li>
-              <li><a href="politics.html">Privacy policy</a></li>
+              <li><a href="politics.html#terms">Terms of service</a></li>
+              <li><a href="politics.html#Privacy">Privacy policy</a></li>
             </ul>
           </div>
 
           <div class="col-lg-2 col-6 footer-links">
             <h4>Products & Solution</h4>
             <ul>
-              <li><a href="productsdetails.html#product-1">Interpretability</a></li>
-              <li><a href="productsdetails.html#product-2">Anonymization</a></li>
-              <li><a href="productsdetails.html#product-3">Compression</a></li>
-              <li><a href="productsdetails.html#product-4">Benchmarking</a></li>
-              <li><a href="productsdetails.html#product-5">GenAI Safety</a></li>
-              <li><a href="productsdetails.html#product-6">Evolving Threat Management</a></li>
-              <li><a href="productsdetails.html#product-7">Algorithmic Protection</a></li>
+              <li><a href="productsdetails.html?product=product-1">Interpretability</a></li>
+              <li><a href="productsdetails.html?product=product-2">Anonymization</a></li>
+              <li><a href="productsdetails.html?product=product-3">Compression</a></li>
+              <li><a href="productsdetails.html?product=product-4">Benchmarking</a></li>
+              <li><a href="productsdetails.html?product=product-5">GenAI Safety</a></li>
+              <li><a href="productsdetails.html?product=product-6">Evolving Threat Management</a></li>
+              <li><a href="productsdetails.html?product=product-7">Algorithmic Protection</a></li>
             </ul>
           </div>
 
@@ -362,7 +362,7 @@ If you have any questions about our Cookie Policy, please contact us via contact
     </div>
 
     <div class="container copyright text-center">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">Ultra Deep Tech</strong> <span>All Rights Reserved</span></p>
+      <p>© <span>Copyright</span> <strong class="px-1 sitename" style="color: #2b5e96;">Ultra Deep Tech</strong> <span>All Rights Reserved</span></p>
       <div class="credits">
         Designed by <a href="https://www.linkedin.com/in/maximilianoeacri/" target="_blank">Maximiliano Acri</a>
       </div>
@@ -371,7 +371,7 @@ If you have any questions about our Cookie Policy, please contact us via contact
   </footer>
 
   <div id="cookie-banner" class="cookie-banner" style="display: none;">
-    <p>This website uses cookies to enhance your user experience. By continuing to browse, you agree to our <a href="politics.html">Cookie Policy</a>.<br> You can adjust your browser settings to manage or disable cookies.</p>
+    <p>This website uses cookies to enhance your user experience. By continuing to browse, you agree to our <a href="politics.html#cookie">Cookie Policy</a>.<br> You can adjust your browser settings to manage or disable cookies.</p>
     <button id="accept-cookies">Accept</button>
     <button id="deny-cookies">Deny</button>
 </div>
