--- a/index.html
+++ b/index.html
@@ -296,6 +296,7 @@
 
     </section><!-- /Services Section -->
 
+
     <!-- Call To Action Section -->
     <section id="call-to-action" class="call-to-action section">
 
@@ -472,6 +473,7 @@
   <script src="assets/js/main.js"></script>
   <script src="assets/js/script.js"></script>
   <script src="assets/js/cookies.js"></script>
+  <script src="assets/js/background.js"></script>
 
 </body>
 
