--- a/service-details.html
+++ b/service-details.html
@@ -96,7 +96,7 @@
   <main class="main">
 
     <!-- Page Title -->
-    <div class="page-title" data-aos="fade" style="background-image: url(assets/img/ai\ consulting.png);">
+    <div class="page-title" data-aos="fade" style="background-image: url(assets/img/blog/blog-6.jpg);">
       <div class="container">
         <h1>Services Details</h1>
         <nav class="breadcrumbs">
