--- a/index.html
+++ b/index.html
@@ -29,6 +29,16 @@
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LD1QMH1MRS"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LD1QMH1MRS');
+</script>
+
 </head>
 
 <body class="index-page">
@@ -161,7 +171,7 @@
 
                 <div class="swiper-slide">
                   <div class="item">
-                    <h3 class="mb-3">Leadership in Technological InUltra Deep Techtion</h3>
+                    <h3 class="mb-3">Leadership in Technological In Ultra Deep Techtion</h3>
                     <!--<h4 class="mb-3">Optio reiciendis accusantium iusto architecto at quia minima maiores quidem, dolorum.</h4>-->
                     <p>At Ultra Deep Tech, we lead the AI revolution with advanced technologies and inUltra Deep Techtive solutions. Our commitment to research and development ensures that we stay ahead in the tech realm, providing our clients with a competitive edge.</p>
                   </div>
@@ -228,7 +238,7 @@
             <div>
               <h4 class="title">Interpretability</h4>
               <p class="description">Simplify and understand your AI model with techniques for bias analysis, feature generation, and simple mathematical formulas.</p>
-              <a href="./productsdetails.html#product-2" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
+              <a href="productsdetails.html?product=product-1" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
           <!-- End Service Item -->
@@ -239,7 +249,7 @@
               <h4 class="title">Anonymization</h4>
               <p class="description">Protect data and model privacy and security with homomorphic encryption, safeguarding user and company information.
               </p>
-              <a href="./productsdetails.html#product-2" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
+              <a href="productsdetails.html?product=product-2" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -248,7 +258,7 @@
             <div>
               <h4 class="title">Compression</h4>
               <p class="description">Optimize model performance with advanced quantization and pruning techniques, reducing size and complexity without sacrificing accuracy.              </p>
-              <a href="./productsdetails.html#product-3" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
+              <a href="productsdetails.html?product=product-3" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -257,7 +267,7 @@
             <div>
               <h4 class="title">Benchmarking</h4>
               <p class="description">Evaluate and improve your AI system with specialized benchmarks, safety metrics, and performance evaluations under various conditions.              </p>
-              <a href="./productsdetails.html#product-4" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
+              <a href="productsdetails.html?product=product-4" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -268,7 +278,7 @@
             <div>
               <h4 class="title">GenAI Safety              </h4>
               <p class="description">Maintain data and model security with updated repositories, data leak detection, and internal monitoring to prevent threats.</p>
-              <a href="./productsdetails.html#product-5" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
+              <a href="productsdetails.html?product=product-5" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -277,7 +287,7 @@
             <div>
               <h4 class="title">Evolving Threat Management              </h4>
               <p class="description">Manage emerging threats with a specialized team in AI and cybersecurity, ensuring continuous protection for your system.              </p>
-              <a href="./productsdetails.html#product-6" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
+              <a href="productsdetails.html?product=product-6" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="500">
@@ -285,7 +295,7 @@
             <div>
               <h4 class="title">Algorithmic Protection              </h4>
               <p class="description">Control and protect AI usage with rejection sampling, algorithmic moderation, and internal testing to meet regulatory standards.              </p>
-              <a href="./productsdetails.html#product-7" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
+              <a href="productsdetails.html?product=product-7" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
           
